--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ label{
 
 #waste-info {
     margin-top: 40px;
-    font-size: 22pt;
+    font-size: 20pt;
 } 
 
 #waste-number-description {
@@ -76,7 +76,7 @@ label{
 
 #number-wasted-portions {
     color: #cb3752;
-    font-size: 200pt;
+    font-size: 172pt;
     margin-top: -120px;
 }
 
@@ -92,9 +92,19 @@ label{
 #dynamic-info {
     padding: 0px;
     margin-top: 0px;
+    margin-bottom: 100px;
     font-size: 48pt;
     color: #cb3752;
 }
+
+#dynamic-info2 {
+    padding: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 40pt;
+    color: #58b7a7;
+}
+
 
 .axis--x path {
   display: none;
@@ -102,8 +112,8 @@ label{
 
 .line {
   fill: none;
-  stroke: steelblue;
-  stroke-width: 3px;
+  stroke: #58b7a7;
+  stroke-width: 4px;
 }
 
 .text {
